Minor adjustments to chat.css - Combined/adjusted css for more clarity and readability - Fixed rotating loading issue by wrapping rotating element within a wrapper element

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+/* Global Variables */
+:root {
+  --primary-color: #00355f;
+  --secondary-color: #2596be;
+  --text-color: #f0f0f0;
+  --gradient: linear-gradient(to right bottom, #00355f, #2596be);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,31 +17,31 @@
 
 body {
   height: 100vh;
-  padding-bottom: 156px;
+  padding-bottom: 150px;
   background-color: lightblue;
 }
 
 .chat-navbar {
-  background: linear-gradient(to right bottom, #00355f, #2596be);
-  color: #f0f0f0;
-  height: 60px;
+  background: var(--gradient);
+  min-height: 60px;
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-areas: "back heading";
+  grid-template-areas: "back-button heading";
   align-items: center;
-  margin-bottom: 1rem;
 }
 
-#back-btn {
+.chat-back-btn, .chat-heading {
+  font-size: 1.5rem;
+  color: var(--text-color);
+}
+
+.chat-back-btn {
   border: none;
   background-color: transparent;
-  font-size: 2rem;
-  color: #f0f0f0;
 }
 
-.chat-title {
+.chat-heading {
   justify-self: center;
-  font-size: 2rem;
 }
 
 .chat-container {
@@ -46,24 +54,39 @@ body {
   grid-template-rows: 1fr auto;
   grid-template-areas: 
     "display"
-    "message";
+    "send-message";
 }
 
-.messages-container {
+.message-display {
   grid-area: display;
-  height: 100%;
   overflow-y: scroll;
 }
 
-.messages-form {
-  grid-area: message;
+.message-form-container {
+  grid-area: send-message;
   display: grid;
   grid-template-columns: 1fr auto;
-  gap: 2rem
 }
 
-.messages-form > button {
+.btn-send {
   padding: 0.5rem 2rem
+}
+
+.loading-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading {
+  animation: myMove 3s forwards infinite;
+  font-size: 3rem;
+}
+
+@keyframes myMove {
+  100% {transform: rotate(360deg);}
 }
 
 .l-message-container,
@@ -144,18 +167,4 @@ body {
 
 .l-content {
   justify-self: start;
-}
-
-.loading {
-  animation: myMove 5s infinite;
-  font-size: 48px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@keyframes myMove {
-  80% {transform: rotate(360deg);}
 }
